<resources>
    <string name="app_name">背单词</string>
    <string name="first_fragment_label">Recite Words Happily</string>
    <string name="once_more">Tap the Back button again to exit the app.</string>
    <string name="play_open">打开</string>
    <string name="play_order">Order</string>
    <string name="play_open_from">选择范围</string>
    <string name="play_img">Play</string>
    <string name="pause_img">Pause</string>
    <string name="play_loop">Loop</string>
    <string name="play_prev">Previous</string>
    <string name="play_last">to Last</string>
    <string name="play_next">Next</string>
    <string name="play_begin">Begin</string>
    <string name="play_end">End</string>
    <string name="play_left">Left</string>
    <string name="play_right">Right</string>
    <string name="play_add">Add</string>
    <string name="play_save">Save</string>
    <string name="play_delete">Delete</string>
    <string name="play_quick">Quick</string>
    <string name="play_folder">文件夹</string>
    <string name="loop_count">循环次数</string>
    <string name="play_sequence">Play Sequence</string>
    <string name="play_in_order">Play In Order</string>
    <string name="play_in_random">In-lesson random</string>
    <string name="play_all_random">All random</string>
    <string name="play_single">单个文件</string>
    <string name="play_favorite">Favorite</string>
    <string name="play_choose">Choose</string>
    <string name="play_show_type">Show Word Type</string>
    <string name="play_show_range">Show Word Range</string>
    <string name="show_all">Show ALL</string>
    <string name="show_pronunciation">Show Pronunciation</string>
    <string name="show_foreign">Show Foreign</string>
    <string name="show_native">Show Native</string>
    <string name="show_chosen">Show Chosen</string>
    <string name="play_mode">Play Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="mute_mode">Mute Mode</string>
    <string name="choose_lesson">选择课程</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="record">Record</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="stop_img">Stop</string>
    <string name="loop_begin">Loop Begin</string>
    <string name="loop_end">Loop End</string>
    <string name="reset">Reset</string>
    <string name="start_to_left">Start to Left</string>
    <string name="start_to_right">Start to Right</string>
    <string name="end_to_left">End to Left</string>
    <string name="end_to_right">End to Right</string>
    <string name="show_none">Show None</string>
    <string name="all">ALL</string>
    <string name="remove">Remove</string>
    <string name="show_remove">Show Removed</string>
    <string name="show_normal">Show Normal</string>
    <string name="background">Black</string>
    <string name="read_only">Read Only</string>
    <string name="foreign_only">Foreign Only</string>
    <string name="edit_word">Edit Word File</string>
    <string name="edit">Edit</string>
    <string name="font_size">Font Size</string>
    <string name="middle_time">Break Time</string>
    <string name="pause_time">Pause Time</string>
    <string name="show_model">Show List</string>
    <string name="help">Help</string>
    <string name="setting">设置</string>
</resources>