<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.frank.word.WordActivity">
    <item
        android:id="@+id/open_file"
        android:title="@string/play_open">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/folder"
                    android:showAsAction="ifRoom"
                    android:title="@string/play_folder" />
                <item
                    android:id="@+id/folder_range"
                    android:showAsAction="ifRoom"
                    android:title="@string/play_open_from"
                    android:visible="false" />
                <item
                    android:id="@+id/choose_lesson"
                    android:showAsAction="ifRoom"
                    android:title="@string/choose_lesson"
                    android:visible="false" />
                <item
                    android:id="@+id/open"
                    android:showAsAction="ifRoom"
                    android:title="@string/play_single" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/edit"
        android:title="@string/edit">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/read_only"
                    android:checkable="true"
                    android:checked="true"
                    android:showAsAction="never"
                    android:title="@string/read_only" />
                <item
                    android:id="@+id/edit_word"
                    android:showAsAction="never"
                    android:title="@string/edit_word" />
                <item
                    android:id="@+id/middle_play"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/middle_time" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/setting"
        android:showAsAction="never"
        android:title="设置" />

    <item
        android:id="@+id/help"
        android:showAsAction="never"
        android:title="Help" />
</menu>